--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
     "name": "artistsearch",
     "version": "1.0.0",
-    "private": true
+    "private": true,
+    "dependencies": {
+        "next": "^12.0.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    },
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    }
 }
